--- a/style.css
+++ b/style.css
@@ -411,6 +411,8 @@ img {
   max-width: 575px;
   text-align: center;
   margin-bottom: 45px;
+  margin-left: auto;
+  margin-right: auto;
 }
 #Helping .image {
   height: 570px;
